few corrections. fixed menu on mobile

--- a/css/menu.css
+++ b/css/menu.css
@@ -20,6 +20,12 @@ nav{
 
 } 
 
+.fixed{
+    position: fixed;
+    top: 0;
+    z-index: 100;
+}
+
 
 .navlinks{
     display: flex;
@@ -97,6 +103,10 @@ nav h4{
         flex-basis: 60%;
     }
 
+    nav h4{
+        font-size: 1.5em ;
+    }
+
 
 
 
@@ -108,7 +118,7 @@ nav h4{
 
     nav{
         position: relative;
-        height: 75px;
+        height: 65px;
         margin-bottom: 40px;
         box-shadow: none;
         border: none;
@@ -118,18 +128,18 @@ nav h4{
     .navlinks{
         position: absolute;
         right: 0;
-        height: 55vh;
+        height: 50vh;
         min-height: 450px;
         width: 75vw;
         max-width: 430px;
-        top: 75px;
+        top: 65px;
         background-color: rgb(60, 60, 60);
         display: flex;
         flex-direction: column;
         align-items: flex-end;
         justify-content: space-around;
         z-index: 10;
-        padding: 40px 40px 40px 10px;
+        padding: 20px 40px 20px 10px;
         border-bottom-left-radius: 5px;
         transform: translateX(100%);
         transition: transform 0.3s ease-in-out;
@@ -198,7 +208,7 @@ nav h4{
     .sticky {
         width: 100%;
         height: 55px;
-        background-color: rgb(238, 238, 238);
+        background-color: rgba(255, 255, 255, 0.97);
         color: rgb(0, 0, 0);
         z-index: 1000;
         position: fixed;
@@ -206,6 +216,9 @@ nav h4{
         left: 0;
         transition: background-color 0.4s ease-in;
         padding: 0 10vw;
+        border-radius: 0;
     }
+
+    
     
 }
